--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,7 @@
-server:
-  port: 8090
 
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/auth?useSSL=false&serverTimezone=UTC
-    username: root
-    password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
+  profiles:
+    active: dev
 
 mybatis:
   configuration:
@@ -15,9 +10,8 @@ mybatis:
   type-aliases-package: com.demo.auth.center.entity
 
 
-logging:
-  level:
-    root: INFO
-    org.springframework: debug
-    org.mybatis: DEBUG
-    com.demo.auth.center: DEBUG
+security:
+  whitelist:
+    - /login
+    - /error
+    - /register
